# smart-banking-assistant

./: .gitignore  README.md  app.py  debug_retrieval.py  main.py  pyproject.toml  requirements.txt  schema.sql
.guardrails/: hub_registry.json
sql/: seed_data.sql  vector_schema.sql
src/agent/: agent.py
src/api/v1/agents/: agent.py  agents.py
src/api/v1/routes/: query.py
src/api/v1/schema/: query_schema.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: tools.py
src/core/: db.py  guardrails.py
src/ingestion/: docling_parser.py  ingestion.py
src/retrieval/: retrieval.py
src/sql_agent/: nl2sql.py
src/ui/: app.py
