[project]
name = "smart-banking-assistant"
version = "0.1.0"
description = "Capstone Project 2 - Smart Banking Assistant with LangGraph, Hybrid RAG, Reranking, and safe NL-to-SQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=7.0.3",
    "docling>=2.97.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.4",
    "pdfminer-six>=20260107",
    "psycopg>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "unstructured-inference>=1.6.11",
    "unstructured[pdf]>=0.22.31",
    "uvicorn>=0.48.0",
]
